# Pagination

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  Pagination.cpp  Pagination.h  README.md
plugin/: CMakeLists.txt  paginationplugin.cpp  paginationplugin.h  paginationplugin.qrc
qml/: Pagination.qml  StateBtn.qml
src/: CMakeLists.txt  pagination.cpp  pagination.h  pagingstyle1.cpp  pagingstyle1.h  pagingstyle2.cpp  pagingstyle2.h  pagingutil.cpp  pagingutil.h
test/: CMakeLists.txt  main.cpp  paginationtest.cpp  paginationtest.h  paginationtest.ui
